<resources>
    <string name="app_name">MisTareasEdix</string>
    <string name="mis_tareas">MIS TAREAS</string>
    <string name="imagen_fondo_principal">imagen fondo principal</string>
    <string name="imagen_fondo_login">imagen fondo login</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="todolist">todolist</string>
    <string name="login">LOGIN</string>
    <string name="nuevo_usuario">Crear cuenta</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="crear">Crear</string>
    <string name="volver">Volver</string>
    <string name="repite_password">Repite Password</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="imagen_fondo_task">imagen fondo task</string>
    <string name="finalizar">Finalizar</string>
</resources>