<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">


    <!-- imagen de fondo -->

    <!-- texto Usuario -->

    <!-- caja texto usuario -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imagen_fondo_login"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_nueva_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nuevo_usuario"
        style="@style/etiquetas"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="145dp"
        android:letterSpacing="0.01"
        android:text="@string/nombre_usuario"

        android:textAlignment="textStart"
        android:textColor="@color/colorCrearCuenta"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/caja_nuevo_usuario"
        style="@style/cajasTexto"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/usuario" />

    <requestFocus />

    <!-- caja texto password -->

    <!-- nuevo password -->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/caja_nuevo_password"
        style="@style/cajasTexto"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="288dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/nuevo_password"
        style="@style/etiquetas"
        android:layout_width="99dp"
        android:layout_height="31dp"
        android:layout_below="@id/caja_nuevo_usuario"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:letterSpacing="0.01"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textColor="@color/colorCrearCuenta"
        android:textSize="20sp" />



    <!-- Boton Crear-->
    <Button
        android:id="@+id/boton_crear"
        android:layout_width="378dp"
        android:layout_height="57dp"
        android:layout_below="@id/caja_nuevo_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/boton"
        android:onClick="btnCrear"
        android:text="@string/crear"
        android:textColor="@color/colorCrearCuenta"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Boton Volver -->
   <Button
       android:id="@+id/boton_volver"
       android:layout_width="142dp"
       android:layout_height="55dp"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="104dp"
       android:layout_marginBottom="118dp"
       android:text="@string/volver"
       android:onClick="btnVolver"
       android:background="@drawable/boton"
       android:textColor="@color/white"
       android:textStyle="bold"/>

</RelativeLayout>